--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "mellori-desktop"
-version = "24.02.05"
+version = "24.2.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gio = "0.19.2"
 gtk = "0.18.1"
+
+[build-dependencies]
+glib-build-tools = "0.19.0"
